bugfix: image size on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -106,6 +106,10 @@ h3 {
 	font-size: 1.25em;
 }
 
+img {
+	max-width: 100%;
+}
+
 .card {
 	background-color: #fff;
 	border-radius: 4px;
